é isso ae manin

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,16 @@
 
 
 
-    <header>Só coisa boa</header>
+    <header>Só coisa boa
+            <a href="https://www.google.com/search?q=jogos+do+vasco&oq=jogos+do+vasco&gs_lcrp=EgZjaHJvbWUyDAgAEEUYORixAxiABDINCAEQABiDARixAxiABDINCAIQABiDARixAxiABDIHCAMQABiABDIHCAQQABiABDINCAUQABiDARixAxiABDIHCAYQABiABDIHCAcQABiABDIHCAgQABiPAjIHCAkQABiPAtIBCDMxMjRqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8"
+                target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/pt/a/ac/CRVascodaGama.png?20210901174632" height="38.2"
+                    width="30" alt="É o Vasco"/>
+    
+            </a>
+    
+
+    </header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -32,8 +41,8 @@
     <section class="categoria">
         <h2>Tá aí ó</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=9f5zD7ZSNpQ">
-                <img src="https://img.youtube.com/vi/9f5zD7ZSNpQ/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=nE5d4d7ObyE">
+                <img src="https://img.youtube.com/vi/nE5d4d7ObyE/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=ZAz3rnLGthg">
                 <img src="https://img.youtube.com/vi/ZAz3rnLGthg/maxresdefault.jpg" />
@@ -71,8 +80,20 @@
             <a href="https://www.youtube.com/watch?v=EBUFtoC2oj4">
                 <img src="https://img.youtube.com/vi/EBUFtoC2oj4/maxresdefault.jpg" />
             </a>
+            <a href="https://www.youtube.com/watch?v=9f5zD7ZSNpQ">
+                <img src="https://img.youtube.com/vi/9f5zD7ZSNpQ/maxresdefault.jpg" />
+            </a>
         </div>
     </section>
+
+    <div class="meu-git">
+        <a href="https://github.com/PaulinRodograu" target="_blank">
+            <img src="https://pt.quizur.com/_image?href=https%3A%2F%2Fimg.quizur.com%2Ff%2Fimg61a3d7b9498415.80142866.jpg%3FlastEdited%3D1638127557&w=600&h=600&f=webp"
+                height="250" width="310" alt="é o messi careca" />
+        </a>
+        <h2>Meu Perfil No Github</h2>
+        <h6>(Clique Na Imagem)</h6>
+    </div>
 
 
 </body>
